--- a/Rmd/JTB_ms.tex
+++ b/Rmd/JTB_ms.tex
@@ -757,7 +757,7 @@ applications/utility}\label{discussion---potential-applicationsutility}
 \hypertarget{refs}{}
 \hypertarget{ref-Costanza:2014ex}{}
 Costanza, R, R de Groot, and P Sutton. 2014. ``Changes in the global
-value of ecosystem services.'' \emph{Global Environmental \ldots{}} 26:
+value of ecosystem services.'' \emph{Global Environmental Change} 26:
 152--58.
 doi:\href{https://doi.org/10.1016/j.gloenvcha.2014.04.002}{10.1016/j.gloenvcha.2014.04.002}.
 
@@ -778,7 +778,6 @@ Glynn, Peter W, Juan L Maté, Andrew C Baker, and MO Calderón. 2001.
 1997-1998 El Niño-Southern Oscillation event: Spatial/temporal patterns
 and comparisons with the 1982-1983 event.'' \emph{Bulletin of Marine
 Science} 69 (1): 79--109.
-\url{http://www.scopus.com/record/display.url?fedsrfIntegrator=MEKPAPERS-SCOCIT\&origin=fedsrf\&view=basic\&eid=2-s2.0-0034761826}.
 
 \hypertarget{ref-Jager:2013bj}{}
 Jager, Tjalling, Benjamin T Martin, and Elke I Zimmer. 2013. ``DEBkiss
@@ -790,7 +789,6 @@ doi:\href{https://doi.org/10.1016/j.jtbi.2013.03.011}{10.1016/j.jtbi.2013.03.011
 Jokiel, Paul L, and SL Coles. 1977. ``Effects of temperature on the
 mortality and growth of Hawaiian reef corals.'' \emph{Marine Biology} 43
 (3): 201--8.
-\url{http://www.scopus.com/record/display.url?fedsrfIntegrator=MEKPAPERS-SCOCIT\&origin=fedsrf\&view=basic\&eid=2-s2.0-0000237488}.
 
 \hypertarget{ref-Kooijman:2010vd}{}
 Kooijman, SALM. 2010. \emph{Dynamic Energy Budget Theory for Metabolic
