--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -734,17 +734,25 @@ To analyze qualitative behavior, we ran the model to steady state across
 gradients of external irradiance and DIN, and plotted the specific
 growth rate (Fig. 2A) and symbiont to host biomass ratio (Fig. 2B).
 Results are consistent with observations in corals: specific growth
-rates
+rates are low at very low levels of irradiance and DIN, as these
+scenarios limit the availability of carbon and nitrogen, respectively,
+to build biomass. As these resources increase, specific growth
+increases, reaching its highest levels above 2 µM DIN and
+\textasciitilde{}15 mol photons m\textsuperscript{-2}
+d\textsuperscript{-1}. Peak specific growth rates are around
+\textasciitilde{}0.1 d\textsuperscript{-1}, which is consistent with
+values reported in the literature (Muscatine, R McCloskey, and E Marian
+(1981)).
 
 \begin{figure}[htbp]
 \centering
 \includegraphics{../img/Fig2.png}
-\caption{Steady state values of (A) specific growth
-(\(Cmol \cdot Cmol^{-1} \cdot d^{-1}\)) and (B) the symbiont to host
-biomass ratio (\(CmolS \cdot CmolH^{-1}\)) across gradients of external
-irradiance and dissolved inorganic nitrogen. Simulations for each
-combination of light and nutrients (21 points along each axis) were run
-for 100 days with a time step of 1 day. Negative steady state growth
+\caption{Steady state values of (A) specific growth (Cmol
+Cmol\textsuperscript{-1} d\textsuperscript{-1}) and (B) the symbiont to
+host biomass ratio (CmolS CmolH\textsuperscript{-1}) across gradients of
+external irradiance and dissolved inorganic nitrogen. Simulations for
+each combination of light and nutrients (21 points along each axis) were
+run for 100 days with a time step of 1 day. Negative steady state growth
 rates, and corresponding S:H ratios, were set to zero.}
 \end{figure}
 
@@ -813,6 +821,12 @@ doi:\href{https://doi.org/10.1016/j.jtbi.2009.03.004}{10.1016/j.jtbi.2009.03.004
 Muscatine, Leonard, and James W Porter. 1977. ``Reef corals: mutualistic
 symbioses adapted to nutrient-poor environments.'' \emph{Bioscience} 27
 (7): 454--60.
+
+\hypertarget{ref-Muscatine:1981jy}{}
+Muscatine, Leonard, L R McCloskey, and R E Marian. 1981. ``Estimating
+the daily contribution of carbon from zooxanthellae to coral animal
+respiration.'' \emph{Limnology and Oceanography} 26 (4): 601--11.
+doi:\href{https://doi.org/10.4319/lo.1981.26.4.0601}{10.4319/lo.1981.26.4.0601}.
 
 \hypertarget{ref-RALanguageandEn:2014wf}{}
 R Core Team. 2014. ``R: A Language and Environment for Statistical
